# Coding-Interview-Guide

./: CMakeLists.txt  LICENSE  README.md
chapter1-stackandqueue/: 10maxsubminequalnum.cpp  1getMinStack.cpp  2twoStacktoQueue.cpp  3reverseStackbyRecursion.cpp  4catdogQueue.cpp  5sortbyStack.cpp  6hanoProblem.cpp  7maxWindow.cpp  8maxTree.cpp  9maxSubMatrix-1.cpp  9maxSubMatrix-2.cpp
chapter2-linklist/: 10addList.cpp  11getIntersectNode.cpp  12reverseKnodes.cpp  13removeRepeatEle.cpp  14removeValue.cpp  15convertTreetoLink.cpp  16linkSelectionSort.cpp  17removeWiredNode.cpp  18insertNumToLink.cpp  19mergeTwoLink.cpp  1linklistsamepart.cpp  20reLocateLeftandRight.cpp  2deleteKele.cpp  3deletemidnode.cpp  4reverseSingleandDual.cpp  5reversePartLinklist.cpp  6JosephusProblem.cpp  7isPalindrome.cpp  8leftSmall-midEqual-rightBig.cpp  9copyListwithRand.cpp
chapter3-binarytree/: 1travelBinaryTree.cpp  2printTreeEdge.cpp  3printBinaryTree.cpp  4serializeAndDeserialize.cpp  5morrisTraversal.cpp  6getMaxLength.cpp  7subBST.cpp
extend/: BiTree.cpp  BiTree.h
src/: BiTree.cpp
